[metadata]
# replace with your username:
name = 6403wency413
version = 0.0.1
author = Erwin Salubre
author_email = erwin@salubre.ca
description = Battleships game for coding challenge at Xerris
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/6403wency413/Battleships.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:"pygame", "sys"
python_requires = >=3.6